third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_return.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `LambdaReturn::inline_apply2` has a function parameter:
  ┌─ tests/lambda/inline-parity/lambda_return.move:2:16
  │
2 │     public fun inline_apply2(f: |u64|u64, b: u64) : u64 {
  │                ^^^^^^^^^^^^^ - Parameter `f` has function-valued type `|u64|u64`.
